--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
   "dependencies": {},
   "devDependencies": {
     "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "html-webpack-plugin": "^5.3.2",
     "pug": "^3.0.2",
     "pug-loader": "^2.4.0",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack --mode development",
+    "prod": "webpack --mode production"
   },
   "repository": {
     "type": "git",
