--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "dependencies": {},
   "devDependencies": {
     "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "css-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
+    "mini-css-extract-plugin": "^2.2.0",
+    "node-sass": "^6.0.1",
     "pug": "^3.0.2",
     "pug-loader": "^2.4.0",
+    "sass-loader": "^12.1.0",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0"
   },
