--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack --mode=development",
+    "dev": "webpack --mode=development --watch",
     "prod": "webpack --mode=production"
   },
   "repository": {
