--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "jquery": "^3.6.0",
     "jquery-ui": "^1.12.1",
     "jsdom": "^17.0.0",
+    "paginationjs": "^2.1.5",
     "webpack-jquery-ui": "^2.0.1"
   },
   "devDependencies": {
