--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
     "pug-loader": "^2.4.0",
     "sass-loader": "^12.1.0",
     "webpack": "^5.51.1",
-    "webpack-cli": "^4.8.0"
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.3.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack --mode=development --watch",
     "prod": "webpack --mode=production",
-    "try": "webpack --mode=development"
+    "try": "webpack --mode=development",
+    "host": "webpack serve"
   },
   "repository": {
     "type": "git",
