--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
   "devDependencies": {
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "css-loader": "^6.2.0",
+    "css-minimizer-webpack-plugin": "^3.1.1",
     "html-webpack-plugin": "^5.3.2",
     "jquery": "^3.6.0",
     "jquery-ui": "^1.12.1",
-    "mini-css-extract-plugin": "^2.2.0",
+    "mini-css-extract-plugin": "^2.4.2",
     "node-sass": "^6.0.1",
     "paginationjs": "^2.1.5",
     "pug": "^3.0.2",
