--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "css-loader": "^6.2.0",
     "css-minimizer-webpack-plugin": "^3.1.1",
+    "eslint": "^8.2.0",
     "html-webpack-plugin": "^5.3.2",
     "jquery": "^3.6.0",
     "jquery-ui": "^1.12.1",
