--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "css-loader": "^6.2.0",
     "css-minimizer-webpack-plugin": "^3.1.1",
     "eslint": "^8.2.0",
+    "eslint-plugin-fsd": "^1.0.1",
     "html-webpack-plugin": "^5.3.2",
     "jquery": "^3.6.0",
     "jquery-ui": "^1.12.1",
