--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "stylelint-scss": "^3.21.0",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0",
+    "webpack-dashboard": "^3.3.6",
     "webpack-dev-server": "^4.3.1"
   },
   "scripts": {
