--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "css-minimizer-webpack-plugin": "^3.1.1",
     "eslint": "^8.2.0",
     "eslint-plugin-fsd": "^1.0.1",
-    "html-webpack-plugin": "^5.3.2",
+    "htmls-webpack-plugin": "^2.0.2",
     "jquery": "^3.6.0",
     "jquery-ui": "^1.12.1",
     "mini-css-extract-plugin": "^2.4.2",
@@ -27,7 +27,8 @@
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0",
     "webpack-dashboard": "^3.3.6",
-    "webpack-dev-server": "^4.3.1"
+    "webpack-dev-server": "^4.3.1",
+    "worker-farm": "^1.7.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
