--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "node-sass": "^6.0.1",
     "paginationjs": "^2.1.5",
     "pug": "^3.0.2",
-    "pug-loader": "^2.4.0",
     "sass-loader": "^12.1.0",
+    "simple-pug-loader": "^0.2.1",
     "stylelint": "^13.13.1",
     "stylelint-config-sass-guidelines": "^8.0.0",
     "stylelint-scss": "^3.21.0",
