--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "css-loader": "^6.2.0",
     "css-minimizer-webpack-plugin": "^3.1.1",
+    "css-mqpacker": "^7.0.0",
+    "cssnano": "^5.0.12",
     "eslint": "^8.2.0",
     "eslint-plugin-fsd": "^1.0.1",
     "html-webpack-plugin": "^5.5.0",
@@ -20,6 +22,7 @@
     "mini-css-extract-plugin": "^2.4.2",
     "node-sass": "^6.0.1",
     "paginationjs": "^2.1.5",
+    "postcss-loader": "^6.2.1",
     "pug": "^3.0.2",
     "sass-loader": "^12.1.0",
     "simple-pug-loader": "^0.2.1",
