--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "air-datepicker": "^3.0.1"
   },
   "devDependencies": {
+    "@principalstudio/html-webpack-inject-preload": "^1.2.7",
     "@webdiscus/pug-loader": "^1.4.6",
     "css-loader": "^6.5.1",
     "css-minimizer-webpack-plugin": "^3.2.0",
