--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "@principalstudio/html-webpack-inject-preload": "^1.2.7",
     "@webdiscus/pug-loader": "^1.4.6",
+    "babel-loader": "^8.2.3",
     "css-loader": "^6.5.1",
     "css-minimizer-webpack-plugin": "^3.2.0",
     "css-mqpacker": "^7.0.0",
