Webpack config is under construction 2

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "pug": "^3.0.2",
     "sass-loader": "^12.3.0",
     "simple-pug-loader": "^0.2.1",
+    "style-loader": "^3.3.1",
     "stylelint": "^13.13.1",
     "stylelint-config-sass-guidelines": "^8.0.0",
     "stylelint-scss": "^3.21.0",
