Webpack config is under construction 4: Added babel-loader, added new injection plugin, but its still doesnt help to inject css

--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "air-datepicker": "^3.0.1"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.16.0",
+    "@babel/preset-env": "^7.16.4",
     "@principalstudio/html-webpack-inject-preload": "^1.2.7",
     "@webdiscus/pug-loader": "^1.4.6",
     "babel-loader": "^8.2.3",
@@ -16,6 +18,7 @@
     "cssnano": "^5.0.12",
     "eslint": "^8.4.0",
     "eslint-plugin-fsd": "^1.0.1",
+    "html-webpack-injector": "^1.1.4",
     "html-webpack-plugin": "^5.5.0",
     "htmls-webpack-plugin": "^2.0.2",
     "jquery": "^3.6.0",
