--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "paginationjs": "^2.1.5",
     "postcss-loader": "^6.2.1",
     "pug": "^3.0.2",
+    "resolve-url-loader": "^4.0.0",
     "sass-loader": "^12.3.0",
     "simple-pug-loader": "^0.2.1",
     "style-loader": "^3.3.1",
