--- a/package.json
+++ b/package.json
@@ -4,38 +4,40 @@
   "description": "frontend",
   "main": "index.js",
   "dependencies": {
-    "air-datepicker": "^3.0.1"
+    "air-datepicker": "^3.1.0"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.16.0",
-    "@babel/preset-env": "^7.16.4",
-    "@webdiscus/pug-loader": "^1.5.1",
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "@babel/preset-env": "^7.16.8",
+    "@webdiscus/pug-loader": "^1.6.0",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.5.1",
-    "css-minimizer-webpack-plugin": "^3.2.0",
+    "css-minimizer-webpack-plugin": "^3.3.1",
     "css-mqpacker": "^7.0.0",
-    "cssnano": "^5.0.12",
-    "eslint": "^8.4.0",
+    "cssnano": "^5.0.15",
+    "eslint": "^8.6.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-fsd": "^1.0.1",
+    "eslint-plugin-import": "^2.25.4",
     "html-webpack-plugin": "^5.5.0",
     "htmls-webpack-plugin": "^2.0.2",
     "jquery": "^3.6.0",
     "jquery-ui": "^1.13.0",
-    "mini-css-extract-plugin": "^2.4.5",
+    "mini-css-extract-plugin": "^2.4.7",
     "node-sass": "^6.0.1",
     "paginationjs": "^2.1.5",
     "postcss-loader": "^6.2.1",
     "pug": "^3.0.2",
     "resolve-url-loader": "^4.0.0",
-    "sass-loader": "^12.3.0",
+    "sass-loader": "^12.4.0",
     "simple-pug-loader": "^0.2.1",
     "style-loader": "^3.3.1",
     "stylelint": "^13.13.1",
     "stylelint-config-sass-guidelines": "^8.0.0",
     "stylelint-scss": "^3.21.0",
-    "webpack": "^5.64.4",
+    "webpack": "^5.66.0",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.6.0",
+    "webpack-dev-server": "^4.7.3",
     "worker-farm": "^1.7.0"
   },
   "scripts": {
@@ -43,7 +45,9 @@
     "dev": "webpack --mode=development --watch",
     "prod": "webpack --mode=production",
     "try": "webpack --mode=development --progress",
-    "host": "webpack serve --history-api-fallback --progress"
+    "host": "webpack serve --history-api-fallback --progress",
+    "lint": "eslint ./src",
+    "lint:fix": "eslint --fix ./src/**"
   },
   "repository": {
     "type": "git",
