--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "css-minimizer-webpack-plugin": "^3.3.1",
     "css-mqpacker": "^7.0.0",
     "cssnano": "^5.0.15",
-    "eslint": "^8.6.0",
-    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint": "6.8.0",
+    "eslint-config-airbnb-base": "14.1.0",
     "eslint-plugin-fsd": "^1.0.1",
     "eslint-plugin-import": "^2.25.4",
     "html-webpack-plugin": "^5.5.0",
@@ -24,7 +24,7 @@
     "jquery": "^3.6.0",
     "jquery-ui": "^1.13.0",
     "mini-css-extract-plugin": "^2.4.7",
-    "node-sass": "^6.0.1",
+    "node-sass": "^7.0.1",
     "paginationjs": "^2.1.5",
     "postcss-loader": "^6.2.1",
     "pug": "^3.0.2",
@@ -32,8 +32,8 @@
     "sass-loader": "^12.4.0",
     "simple-pug-loader": "^0.2.1",
     "style-loader": "^3.3.1",
-    "stylelint": "^13.13.1",
-    "stylelint-config-sass-guidelines": "^8.0.0",
+    "stylelint": "^14.2.0",
+    "stylelint-config-sass-guidelines": "^9.0.1",
     "stylelint-scss": "^3.21.0",
     "webpack": "^5.66.0",
     "webpack-cli": "^4.9.1",
@@ -46,7 +46,7 @@
     "prod": "webpack --mode=production",
     "try": "webpack --mode=development --progress",
     "host": "webpack serve --history-api-fallback --progress",
-    "lint": "eslint ./src",
+    "lint": "eslint ./src/components/header/header.js",
     "lint:fix": "eslint --fix ./src/**"
   },
   "repository": {
