--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "prod": "webpack --mode=production",
     "try": "webpack --mode=development --progress",
     "host": "webpack serve --history-api-fallback --progress",
-    "lint": "eslint ./src/components/button",
+    "lint": "eslint ./src/components/card",
     "lint:fix": "eslint --fix ./src/pages"
   },
   "repository": {
