--- a/package.json
+++ b/package.json
@@ -46,8 +46,8 @@
     "prod": "webpack --mode=production",
     "try": "webpack --mode=development --progress",
     "host": "webpack serve --history-api-fallback --progress",
-    "lint": "eslint ./src/components/input",
-    "lint:fix": "eslint --fix ./src/components/input"
+    "lint": "eslint ./src/components",
+    "lint:fix": "eslint --fix ./src/components"
   },
   "repository": {
     "type": "git",
