--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "frontend",
   "main": "index.js",
   "dependencies": {
-    "air-datepicker": "^3.1.0"
+    "air-datepicker": "^3.1.0",
+    "paginationjs": "^2.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
@@ -25,7 +26,6 @@
     "jquery-ui": "^1.13.0",
     "mini-css-extract-plugin": "^2.4.7",
     "node-sass": "^7.0.1",
-    "paginationjs": "^2.1.5",
     "postcss-loader": "^6.2.1",
     "pug": "^3.0.2",
     "resolve-url-loader": "^4.0.0",
