--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "air-datepicker": "^3.1.0",
-    "paginationjs": "^2.1.5"
+    "paginationjs": "^2.1.5",
+    "jquery-ui": "^1.13.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
@@ -23,7 +24,6 @@
     "html-webpack-plugin": "^5.5.0",
     "htmls-webpack-plugin": "^2.0.2",
     "jquery": "^3.6.0",
-    "jquery-ui": "^1.13.0",
     "mini-css-extract-plugin": "^2.4.7",
     "node-sass": "^7.0.1",
     "postcss-loader": "^6.2.1",
