Fixed an interesting behavior of output.clean option which causes an image vanishing after two saves in a row

--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "dev": "webpack --mode=development --watch",
     "prod": "webpack --mode=production",
     "try": "webpack --mode=development --progress",
-    "host": "webpack serve --history-api-fallback --progress",
+    "host": "webpack serve --progress",
     "lint": "eslint ./src/components",
     "lint:fix": "eslint --fix ./src/components"
   },
