--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "air-datepicker": "^3.1.0",
-    "paginationjs": "^2.1.5",
-    "jquery-ui": "^1.13.0"
+    "jquery-ui": "^1.13.0",
+    "paginationjs": "^2.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
@@ -18,9 +18,9 @@
     "css-minimizer-webpack-plugin": "^3.3.1",
     "cssnano": "^5.0.15",
     "eslint": "6.8.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-fsd": "^1.0.1",
-    "eslint-plugin-import": "^2.25.4",
+    "eslint-config-airbnb-base": "14.2.1",
+    "eslint-plugin-fsd": "1.0.1",
+    "eslint-plugin-import": "2.22.1",
     "html-webpack-plugin": "^5.5.0",
     "htmls-webpack-plugin": "^2.0.2",
     "jquery": "^3.6.0",
