--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
     "stylelint-scss": "^3.21.0",
     "webpack": "^5.66.0",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.7.3",
-    "worker-farm": "^1.7.0"
+    "webpack-dev-server": "^4.7.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
